--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ set(LIBS
 set(SOURCES
   src/apm.cpp
   src/config.cpp
+  src/jvm.cpp
   src/project.cpp
   src/sdk.cpp
   src/utils.cpp
@@ -110,6 +111,7 @@ set(TEST_SOURCES
 
   test/apm.cpp
   test/config.cpp
+  test/jvm.cpp
   test/project.cpp
   test/sdk.cpp
   test/tmp_file.cpp
