--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -137,10 +137,8 @@ jobs:
         working-directory: build
         env:
           CXX: ${{ matrix.compiler }}
-          JDK_VERSION: ${{ matrix.jdk-version }}
-        run: |
-          JAVA_HOME=/usr/lib/jvm/*-$JDK_VERSION-openjdk-* \
-              cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+          JAVA_HOME: /usr/lib/jvm/java-${{ matrix.jdk-version }}-openjdk-amd64
+        run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
       - name: Build
         run: cmake --build build/
