--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,6 +13,9 @@ jobs:
         sdk-api: [28]
 
     steps:
+      - name: Update APT package lists
+        run: sudo apt update
+
       - name: Checkout APM
         uses: actions/checkout@v2
 
