--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -6,6 +6,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      # Allow CodeQL to write security events.
+      security-events: write
     strategy:
       matrix:
         compiler: [g++, clang++]
@@ -18,6 +21,11 @@ jobs:
 
       - name: Checkout APM
         uses: actions/checkout@v2
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: cpp, java
 
       - name: Checkout cxxopts
         uses: actions/checkout@v2
@@ -158,6 +166,9 @@ jobs:
 
       - name: Build
         run: cmake --build build/
+
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v1
 
       - name: Install SDK
         env:
